<resources>
    // GENERAL
    <string name="appName"><b><i>eTranz</i></b></string>

    //activity_login
    <string name="mailText">El. pašto adr.</string>
    <string name="passText">Slaptažodis</string>
    <string name="loginText">Prisijungti</string>
    <string name="registerName">Jūsų vardas</string>
    <string name="registerBirthDate">Jūsų gimimo data</string>
    <string name="registerText">Neturite paskyros? Užsiregistruokite</string>
    <string name="passRemind">Pamiršote slaptažodį? Spauskite čia</string>

    //activity_home_screen
    <string name="home_MainLayout">Main Layout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="post_a_trip">PASKELBTI SAVO KELIONĘ</string>
    <string name="search_for_a_trip">IEŠKOTI KELIONĖS</string>

    //activity_register
    <string name="register">Registruotis!</string>
    <string name="passwordRepeat">Pakartokite įvestą slaptažodį</string>
    <string name="hasAccText">Turite paskyrą? Prisijunkite</string>
    <string name="MONTH_JANUARY">sausio&#160;</string>
    <string name="MONTH_FEBRUARY">vasario&#160;</string>
    <string name="MONTH_MARCH">kovo&#160;</string>
    <string name="MONTH_APRIL">balandžio&#160;</string>
    <string name="MONTH_MAY">gegužės&#160;</string>
    <string name="MONTH_JUNE">birželio&#160;</string>
    <string name="MONTH_JULY">liepos&#160;</string>
    <string name="MONTH_AUGUST">rugpjūčio&#160;</string>
    <string name="MONTH_SEPTEMBER">rugsėjo&#160;</string>
    <string name="MONTH_OCTOBER">spalio&#160;</string>
    <string name="MONTH_NOVEMBER">lapkričio&#160;</string>
    <string name="MONTH_DECEMBER">gruodžio&#160;</string>
    <string name="DATE_FORMAT">&#160;m.&#160;</string>
    <string name="WORD_DAY">&#160;d.</string>
    <string name="ERROR">klaida</string>
    <string name="REGISTRATION_SUCCESS">Registracija sėkminga</string>
    <string name="MISTAKE_OCCURRED">Įvyko klaida</string>
    <string name="PASSWORD_REPEAT_INCORRECT">Neteisingai pakartotas slaptažodis</string>
    <string name="profileText">Pasirinkite profilio nuotrauką</string>

    //navigation_menu
    <string name="myProfile">Mano profilis</string>
    <string name="myTrips">Mano kelionės</string>
    <string name="settings">Nustatymai</string>
    <string name="logout">Atsijungti</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_new__trip_">New_Trip_Activity</string>

    <string name="textFrom">Iš kur išvykstate</string>
    <string name="textTo">Į kur vykstate</string>
    <string name="textDate">Išvykimo data</string>
    <string name="textTime">Išvykimo laikas</string>
    <string name="textSpaces">Vietų skaičius</string>
    <string name="textPrice">Kaina</string>
    <string name="newTripAB">Pridėti kelionę</string>
    <string-array name="cities">
        <item>Vilnius</item>
        <item>Kaunas</item>
        <item>Klaipėda</item>
        <item>Šiauliai</item>
        <item>Panevėžys</item>
        <item>Alytus</item>
        <item>Marijampolė</item>
        <item>Mažeikiai</item>
        <item>Jonava</item>
        <item>Utena</item>
        <item>Kėdainiai</item>
        <item>Telšiai</item>
        <item>Tauragė</item>
        <item>Ukmergė</item>
        <item>Visaginas</item>
        <item>Plungė</item>
        <item>Kretinga</item>
        <item>Šilutė</item>
        <item>Palanga</item>
        <item>Radviliškis</item>
        <item>Gargždai</item>
        <item>Druskininkai</item>
        <item>Rokiškis</item>
        <item>Kuršėnai</item>
        <item>Elektrėnai</item>
        <item>Biržai</item>
        <item>Grigiškės</item>
        <item>Jurbarkas</item>
        <item>Garliava</item>
        <item>Lentvaris</item>
        <item>Raseiniai</item>
        <item>Vilkaviškis</item>
        <item>Anykščiai</item>
        <item>Prienai</item>
        <item>Joniškis</item>
        <item>Varėna</item>
        <item>Kelmė</item>
        <item>Kaišiadorys</item>
        <item>Naujoji Akmenė</item>
        <item>Pasvalys</item>
        <item>Šalčininkai</item>
        <item>Zarasai</item>
        <item>Kupiškis</item>
        <item>Kazlų Rūda</item>
        <item>Molėtai</item>
        <item>Širvintos</item>
        <item>Skuodas</item>
        <item>Pabradė</item>
        <item>Šakiai</item>
        <item>Ignalina</item>
        <item>Švenčionėliai</item>
        <item>Šilalė</item>
        <item>Kybartai</item>
        <item>Nemenčinė</item>
        <item>Pakruojis</item>
        <item>Vievis</item>
        <item>Švenčionys</item>
        <item>Trakai</item>
        <item>Kalvarija</item>
        <item>Lazdijai</item>
        <item>Rietavas</item>
        <item>Žiežmariai</item>
        <item>Eišiškės</item>
        <item>Neringa</item>
        <item>Ariogala</item>
        <item>Šeduva</item>
        <item>Akmenė</item>
        <item>Birštonas</item>
        <item>Venta</item>
        <item>Rūdiškės</item>
        <item>Tytuvėnai</item>
        <item>Vilkija</item>
        <item>Viekšniai</item>
        <item>Pagėgiai</item>
        <item>Ežerėlis</item>
        <item>Gelgaudiškis</item>
        <item>Kudirkos Naumiestis</item>
        <item>Skaudvilė</item>
        <item>Žagarė</item>
        <item>Ramygala</item>
        <item>Salantai</item>
        <item>Simnas</item>
        <item>Linkuva</item>
        <item>Veisiejai</item>
        <item>Priekulė</item>
        <item>Jieznas</item>
        <item>Joniškėlis</item>
        <item>Varniai</item>
        <item>Baltoji Vokė</item>
        <item>Daugai</item>
        <item>Seda</item>
        <item>Vabalninkas</item>
        <item>Subačius</item>
        <item>Virbalis</item>
        <item>Obeliai</item>
        <item>Dūkštas</item>
        <item>Pandėlys</item>
        <item>Užventis</item>
        <item>Dusetos</item>
        <item>Kavarskas</item>
        <item>Smalininkai</item>
        <item>Troškūnai</item>
        <item>Panemunė</item>
    </string-array>
    <string name="emptyFieldMsg">Laukelis negali būti tuščias</string>
    <string name="sameTownsMsg">Negalite keliauti į tą patį miestą</string>
    <string name="search">Ieškoti</string>
    <string name="resetBtnText">Atstatyti slaptažodį</string>
    <string name="resetExpl">Kad atstatytumėte slaptažodį, įveskite savo paskyros el. paštą, paspauskite mygtuką ir sekite instrukcijas kurias gausite į el. paštą</string>
    <string name="resetEmptyMail">Prašome įvesti savo prisijungimo el. pašto adresą</string>
    <string name="resetPassSuccess">Atstatymo instrukcijos išsiųstos, patikrinkite el. paštą</string>
    <string name="resetFail">Įvyko klaida mėginkite dar kartą</string>

    <string name="title_activity_my_trips">Mano kelionės</string>
    <string name="tab_text_1">Vairuotojas</string>
    <string name="tab_text_2">Keleivis</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tvNameMsg">Vardas:</string>
    <string name="tvMailMsg">El. paštas:</string>
    <string name="tvBirtgMsg">Gimimo data:</string>
    <string name="tvPicMsg">Profilio nuotrauka</string>
    <string name="tvRatingMsg">Reitingas:</string>
    <string name="txtEdit">Redaguoti</string>
    <string name="phoneNum">Telefono nr.</string>
    <string name="weakPass">Slaptaždis per trumpas (min. 6)</string>
    <string name="userExists">Toks vartotojas jau egzistuoja</string>
    <string name="wrongMailFormat">Neteisingas el. pašto formatas</string>
    <string name="rate">Įvertinkite vairuotoją!</string>
    <string name="ratingTitle">Kaip vertinate vairuotoją?</string>
</resources>
